--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,9 @@
-set(HPP_LIST "${PROJECT_SOURCE_DIR}/include/Tarea/test.hpp")
+set(HPP_LIST "${PROJECT_SOURCE_DIR}/include/Tarea/bloomFilter.hpp"
+        "${PROJECT_SOURCE_DIR}/include/Tarea/hashes.hpp")
+
 set(CPP_LIST
-        test.cpp
-        hashes.cpp)
+        hashes.cpp
+        bloomFilter.cpp)
 
 add_library(tarea  ${CPP_LIST} ${HPP_LIST})
 target_include_directories(tarea PUBLIC ../include)
