FEAT: experiments implemented

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,11 @@
 set(HPP_LIST "${PROJECT_SOURCE_DIR}/include/Tarea/bloomFilter.hpp"
-        "${PROJECT_SOURCE_DIR}/include/Tarea/hashes.hpp")
+        "${PROJECT_SOURCE_DIR}/include/Tarea/hashes.hpp"
+        "${PROJECT_SOURCE_DIR}/include/Tarea/parser.hpp")
 
 set(CPP_LIST
         hashes.cpp
-        bloomFilter.cpp)
+        bloomFilter.cpp
+        parser.cpp)
 
 add_library(tarea  ${CPP_LIST} ${HPP_LIST})
 target_include_directories(tarea PUBLIC ../include)
