--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(Tarea3)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(${PROJECT_NAME} main.cpp
-        include/Tarea/hashes.hpp)
+        include/Tarea/hashes.hpp
+        include/Tarea/parser.hpp)
 add_subdirectory(src)
 
 target_link_libraries(${PROJECT_NAME} tarea)
