--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,8 @@ set(HPP_LIST "${PROJECT_SOURCE_DIR}/include/Tarea/bloomFilter.hpp"
 set(CPP_LIST
         hashes.cpp
         bloomFilter.cpp
-        parser.cpp)
+        parser.cpp
+        JSONConverter.cpp)
 
 add_library(tarea  ${CPP_LIST} ${HPP_LIST})
 target_include_directories(tarea PUBLIC ../include)
